--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <header>
-      <h1>Hi there My Babe, This is our Memory Manager</h1>
+      <h1>Hi there My Babe, This is our Memory Manager 😊😉😊</h1>
       <p id="daily-verse"></p>
     </header>
 
